<resources>
    <string name="app_name">Easy Badminton</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="here">"  here"</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birtdate">Birthdate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="create_group">Create Group</string>
    <string name="find_group">Find Group</string>
    <string name="select_play_date">Select group play date and time</string>
    <string name="hind_groupname">Please enter group name</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="begintime">เวลาเริ่มเล่น</string>
    <string name="hint_duration">จำนวนชั่วโมง </string>
    <string name="description">Description</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="to">-</string>
    <string name="play_date_time">Play date and Time</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="group_request">Group Request</string>
    <string name="join_group_request">Join Group Request</string>
    <string name="group">Group</string>
    />
</resources>